--- a/index.html
+++ b/index.html
@@ -7,14 +7,18 @@
   <link rel="stylesheet" href="assets/css/styles.css" />
 </head>
 <body>
-  <header>
-    <h1>Inmobiliaria</h1>
-    <nav>
-      <a href="index.html">Inicio</a>
-      <a href="propiedades_venta.html">Propiedades en Venta</a>
-      <a href="propiedades_alquiler.html">Propiedades en Alquiler</a>
-    </nav>
-  </header>
+<header>
+  <div class="logo-container">
+    <img src="assets/img/logo (2).png" alt="Logo Williams Arias Inmobiliaria">
+  </div>
+  <nav>
+    <a href="index.html">Inicio</a>
+    <a href="propiedades_venta.html">Propiedades en Venta</a>
+    <a href="propiedades_alquiler.html">Propiedades en Alquiler</a>
+  </nav>
+</header>
+
+
 
   <section class="seccion-destacada">
     <h2><span class="azul">Descubre nuestras propiedades</span> <span class="verde">usadas destacadas</span></h2>
