--- a/propiedades_venta.html
+++ b/propiedades_venta.html
@@ -6,20 +6,13 @@
     <link rel="stylesheet" href="assets/css/styles.css" />
 
   <title>Propiedades en Venta</title>
-  <style>
-    body { font-family: Arial, sans-serif; background-color: #f4f4f4; margin: 0; padding: 0; }
-    header { background-color: #333; color: white; padding: 1rem; text-align: center; }
-    nav a { color: white; margin: 0 1rem; text-decoration: none; }
-    main { padding: 1rem; }
-    h2 { text-align: center; }
-    section { display: flex; flex-wrap: wrap; gap: 1rem; justify-content: center; }
-    .propiedad { background: white; padding: 1rem; border-radius: 8px; width: 300px; box-shadow: 0 0 5px rgba(0,0,0,0.1); }
-    .propiedad img { width: 100%; height: 180px; object-fit: cover; border-radius: 5px; }
-    .icono { font-size: 1.2rem; margin-right: 5px; }
-  </style>
+
 </head>
 <body>
   <header>
+        <a href="index.html" class="logo-mini">
+  <img src="assets/img/logo (2).png" alt="Logo Inmobiliaria Williams Arias">
+</a>
     <h1>Propiedades en Venta</h1>
     <nav>
       <a href="index.html">Inicio</a>
